[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to implement PINT SAFT registry.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pallet-saft-registry'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false, optional = true }

# polkadot
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.24', default-features = false }

# PINT dependencies
pallet-asset-index = {path = "../asset-index", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

[dev-dependencies]
serde = "1.0.130"

# substrate
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

pallet-asset-index= { path = "../asset-index" }
pallet-remote-asset-manager = { path = "../remote-asset-manager" }
pallet-price-feed = { path = "../price-feed" }

# ORML Dependencies
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',

    'xcm/std',

    'primitives/std'
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'pallet-asset-index/runtime-benchmarks',
    'primitives/runtime-benchmarks',
]
