[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to provide XCM support for handling PINT assets.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pallet-xcm-asset-support'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.3' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3', default-features = false, optional = true }

# Polkadot Dependencies
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3', default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3', default-features = false }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.3', default-features = false }

xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.3', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'xcm/std',
    'xcm-executor/std',
]
# this feature is only for compilation now
runtime-benchmarks = [
    'frame-benchmarking',
    'xcm-builder/runtime-benchmarks',
]


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
