[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to provide XCM support for handling PINT assets.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pallet-xcm-asset-support'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'xcm/std',
    'xcm-executor/std',
]
# this feature is only for compilation now
runtime-benchmarks = [
    'frame-benchmarking',
    'xcm-builder/runtime-benchmarks',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'
optional = true

[dependencies.xcm]
default-features = false
git = 'https://github.com/paritytech/polkadot'
branch = 'rococo-v1'

[dependencies.xcm-executor]
default-features = false
git = 'https://github.com/paritytech/polkadot'
branch = 'rococo-v1'

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.xcm-builder]
default-features = false
git = 'https://github.com/paritytech/polkadot'
branch = 'rococo-v1'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
