[package]
authors = ['ChainSafe Systems']
description = 'Primitive types and traits for PINT.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'primitives'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]

serde = { version = "1.0.130", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.1.3", default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26', default-features = false }

# Polkadot Dependencies
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.26', default-features = false  }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'xcm/std',
]
runtime-benchmarks = []

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
