[package]
authors = ['ChainSafe Systems']
name = "runtime-integration-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# substrate
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-bags-list = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }
sp-npos-elections = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.19' }

# polkadot
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }

# cumulus
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.19' }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.19' }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.19' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.19' }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.19' }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.19' }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }

# orml
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library' }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library' }
orml-xtokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library' }
orml-unknown-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-xcm-support = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

# chainlink
pallet-chainlink-feed = { git = 'https://github.com/smartcontractkit/chainlink-polkadot', branch = 'master' }

# pint
pallet-remote-asset-manager = { path = "../../pallets/remote-asset-manager" }
pallet-asset-index = { path = "../../pallets/asset-index" }
pallet-committee = { path = "../../pallets/committee" }
pallet-price-feed = { path = "../../pallets/price-feed" }
pallet-saft-registry = { path = "../../pallets/saft-registry" }
shot-runtime = { path = "../shot" }
primitives = { path = "../../primitives/primitives" }
xcm-calls = { path = "../../primitives/xcm-calls" }

# others
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator.git", branch = "master" }
env_logger = "0.9"

[features]
runtime-benchmarks = []
